syntax = "proto3";
option java_package = "VireProtobuf.vire.cms";
option java_outer_classname = "ResourceStatusRecordStub";
package vire.cms;

import "vire/utility/BasePayload.proto";
import "google/protobuf/timestamp.proto";

message ResourceStatusRecord {

  vire.utility.BasePayload _base = 1; // Base class

  // reserved 1-99

  string                    path      = 100; // The path/identifier of the resource
  google.protobuf.Timestamp timestamp = 101; // Timestamp of the updated status
  bool 			    missing   = 102; // Missing resource bit
  bool 			    failed    = 103; // Failed resource bit
  bool 			    pending   = 104; // Pending resource bit
  bool 			    disabled  = 105; // Disabled resource bit

}
